using UnityEngine;

namespace Game
{
    public static class AniamtionNames
    {
        public static int Move = Animator.StringToHash("Move");
        public static int Pick = Animator.StringToHash("Pick");
        public static int OpenRoof = Animator.StringToHash("OpenRoof");
        public static int Dancing = Animator.StringToHash("Dancing");
        public static int Carrying = Animator.StringToHash("Carrying");
        public static int Open = Animator.StringToHash("Open");
    }
}